# be-awake-ip-hardwired-nurse-call-system

./: .gitignore  README.md
firmware/: CMakeLists.txt  main.c  main.h  wizchip_conf.c  wizchip_conf.h
windows_application/: app.spec  main.kv  main.py
